# WBUOJ_Judger

./: CMakeLists.txt  LICENSE
apps/: CMakeLists.txt
doc/: README.md
libjudger/: makefile  run.cpp  run.hpp  test.cpp
src/: CMakeLists.txt  run.cpp
